# django-component-tags

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  Pipfile  README.rst  manage.py  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codecov.yml
config/: settings.py  urls.py  wsgi.py
docs/: conf.py  index.rst
src/component_tags/: __init__.py  apps.py  tests.py
src/component_tags/template/: __init__.py  attributes.py  builtins.py  choices.py  components.py  context.py  helpers.py  library.py  media.py  nodes.py  parser.py  wrappers.py
src/component_tags/templates/component_tags/: base.html  slot.html
tests/: conftest.py
